trunk/Archive2/71/f12027480ac68f/output
main.cpp:17:38: error: expected ';' at end of declaration
    int a = 700 *((float)13000/10000)
                                     ^
                                     ;
1 error generated.
